@@ -2,6 +2,7 @@
 + Added test coverage instructions
 + Added how to use GitHub Pages
 + Replaced urls on raw.githubusercontent.com with my own domain g14n.info
++ Moved some files on GitHub Pages to make it DRY
 
 2015-04-21 v0.16
 + Updated travis to Perl v5.20
